--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,21 @@
 aniso8601==6.0.0
+certifi==2019.3.9
+chardet==3.0.4
 Click==7.0
 Flask==1.0.2
+Flask-OAuthlib==0.9.5
 Flask-RESTful==0.3.7
 Flask-SQLAlchemy==2.4.0
 gunicorn==19.9.0
+idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
+oauthlib==2.1.0
 pytz==2019.1
+requests==2.22.0
+requests-oauthlib==1.2.0
 six==1.12.0
 SQLAlchemy==1.3.3
+urllib3==1.25.2
 Werkzeug==0.15.4
